css/style.css
*{
    font-family: 'Montserrat', sans-serif;
}

.button {
    border: none;
    border-radius: 30px;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 15px;
    font-weight: 600;
    cursor: pointer;
    outline: 2px solid rgba(0, 0, 0, 0) !important;
    outline-offset: 2px !important;
    transition: outline 0.5s;
  }

  a:hover{
      color: #fff !important;
  }



/* ---------------------------------- */

.sony-bar{
    width: 100%;
    background-color: #000;
}

.sony-bar img{
    width: 100px;
    margin: 5px;
}

.navbar a{
    color: #000 !important;
}
.navbar a:hover{
    color: #0776cf !important;
}

.play-logo{
    filter: invert(27%) sepia(40%) saturate(6270%) hue-rotate(194deg) brightness(94%) contrast(100%);
    margin-right: 15px;
}

.navbar .button{
    background-color: #555;
    color: #fff !important;
    padding: 15px 20px;
    transition: background-color 0.5s;
}

.navbar .button:hover{
    background-color: #888;
    color: #fff !important;
    transition: background-color 0.5s;
}

.sublink a{
    font-weight: 600;
}

.sublink a::before{
    content: '\2022  ';
    color: #0776cf;
    display: inline-block;
    font-size: 30px;
    vertical-align:auto;
    margin-right: 5px;
}

.search{
    margin-left: 15px;
    filter: invert(0%) sepia(86%) saturate(7467%) hue-rotate(70deg) brightness(108%) contrast(99%);
}

.jumbotron{
    background: url("../img/jumbo-bg.png") no-repeat center;
    background-size: cover;
    height: 90vh;
    position: relative;
    color: #fff;
    margin-top: 90px;
}

.container-jumbo{
    position: absolute;
    bottom: 0;
    margin-bottom: 50px;
}

.jumbo-announce img{
    width: 100%;
    margin-bottom: 40px;
}

.jumbo-announce h1{
    font-size: 50px;
    margin-bottom: 40px;
}

.jumbo-announce p{
    font-size: 20px;
    margin-bottom: 30px;
}

.jumbo-announce .button{
    background-color: #cd3d0f;
    color: #fff;
}

.jumbo-announce .button:hover{
    outline: 2px solid #cd3d0f !important;
    transition: outline 0.5s;
}


.card-game img{
    border-radius: 25px;
    position: relative;
    bottom: 0;
    transition: all 0.3s;
}

.active{
    outline: 3px solid #0776cf !important;
    outline-offset: 3px !important;
}

.games{
    margin-bottom: 100px;
}

.card-game:hover img{
    position: relative;
    bottom: 10px;
    cursor: pointer;
    transition: all 0.3s;
}

.play-5{
    margin-bottom: 100px;
}

.play-5>div{
    color: #0776cf;
    font-weight: 600;
}

.play-5 h1{
    color: #000;
}

.play-5 p{
    color: #666;
    font-size: 25px;
    font-weight: 600;
}

.selected{
    border-bottom: 4px solid #00439c;
}

.device{
    opacity: 50%;
    transition: opacity 0.5s;
}

.device:hover{
    opacity: 100%;
    transition: opacity 0.5s;
    cursor: pointer;
}


.console-information .button{
    background-color: #0776cf;
    color: #fff;
}

.console-information .button:hover{
    outline: 2px solid #0776cf !important;
    transition: outline 0.5s;
}

.takes-two{
    background: url("../img/it-takes-two-hero-banner-desktop.jpg") no-repeat center;
    background-size: cover;
    

    color: #fff;
}

.container-takes-two{

    margin-bottom: 50px;
}

.takes-two-announce img{
    width: 40%;
    margin: 50px 0px;
}

.takes-two-announce h1{
    font-size: 50px;
    margin-bottom: 50px;
}

.takes-two-announce p{
    font-size: 25px;
    margin-bottom: 40px;
}

.takes-two-announce .button{
    background-color: #cd3d0f;
    color: #fff;
}

.takes-two-announce .button:hover{
    outline: 2px solid #cd3d0f !important;
    transition: outline 0.5s;
}

.new-games{
    background-color: #1f1f1f;
    color: #fff;
    margin-bottom: 100px;
}

.new-games div>div{
    font-size: 25px;
    font-weight: 600;
}

.new-games img{
    border-radius: 20px;
}

.play-5 span{
    font-size: 25px;
    vertical-align: top;
}

.description{
    color: #666;
    font-size: 25px;
    font-weight: 600;
}

.product{
    margin-bottom: 100px;
}

.plus{
    background-color: #aaa;
    color: #fff;
    margin-bottom: 100px;
}

.container-plus{
    margin-top: 40px;
}

.plus-announce img{
    width: 70%;
    margin-bottom: 30px;
}

.plus-announce h1{
    font-size: 50px;
    margin-bottom: 50px;
}

.plus-announce p{
    font-size: 16px;
    margin-bottom: 40px;
    color: #000;
}

.plus-announce .button{
    background-color: #ccc;
    color: #0776cf;
    margin-bottom: 20px;
}

.plus-announce .button:hover{
    outline: 2px solid #ccc !important;
    transition: outline 0.5s;
}

.banner img{
    display: none;
}

.ps-now{
    background-color: #161c3b;
    margin-bottom: 100px;
}

.ps-now-content img{
    width: 50%;
}

.ps-now-content p{
    color: #fff;
}

.ps-now-content .button{
    background-color: #fff;
    color: #333;
}

.ps-now-content .button:hover{
    outline: 2px solid #fff !important;
    color: #333 !important;
    transition: outline 0.5s;
}

.banner-ps-now{
    display: none;
}

.social{
    margin-bottom: 100px;
}

.social h1{
    margin-bottom: 70px;
}

footer{
    background-color: #00439c;
    padding: 100px 50px;
}

.ps-logo-footer{
    width: 100%;
    filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(175deg) brightness(104%) contrast(102%);
}

.region img{
    width: 20px;
    margin-right: 5px;

}

.region span{
    color: #fff;
    vertical-align: middle;
}

footer a{
    text-decoration: none;
    color: #fff;
    line-height: 35px;
}

.site img{
    width: 100%;
    margin-bottom: 10px;
}

.site p{
    color: #fff;
    font-size: 15px;
}

.site p span{
    text-decoration: underline;
}














@media screen and (min-width:768px) {

    .banner img{
        display: block;
        max-width: 65vw;
    }

    .banner-ps-now{
        display: block;
    }
    
}

